k8s/Ingress/test/deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prod
  template:
    metadata:
      labels:
        app: prod
    spec:
      containers:
      - name: simple-webserver
        image: menamagdyhalem/simple-webserver
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  selector:
    app: prod
  ports:
    - protocol: TCP
      port: 2000
      targetPort: 3000
  type: ClusterIP
